# chip-8

./: .gitignore  CMakeLists.txt  README.md  chip.h  chip8  main.c  makefile  notes.txt
include/: chip.h
roms/: font.h
src/: chip.c  chip.h  font.c  gfx_sdl.c  gfx_sdl.h  main.c
